@@ -1,0 +1,1 @@
+let $a := (1, 2) return ($a[1], $a[()])
